syntax = "proto3";

package chief_of_state.v1;

option java_package = "com.namely.protobuf.chiefofstate.v1";
option java_multiple_files = true;
option java_outer_classname = "CosInternalProto";
import "google/protobuf/any.proto";

// THESE ARE INTERNAL MESSAGES FOR THE COS SERVICE

// a wrapper message for forwarding headers to the remote writeside handler
message RemoteCommand {
  // a helper messsage for gRPC metadata
  message Header {
      string key = 1;

      oneof value {
          string stringValue = 2;
          bytes bytesValue = 3;
      };
  }

  // the message to send
  google.protobuf.Any command = 1;

  // the grpc headers/metadata
  repeated Header headers = 2;
}
